# opengl-template-for-linux

./: CMakeLists.txt  README.md
include/glad/: glad.c  glad.h
src/: main.cpp
